# 3r3r3r

./: .gitignore  README.md  bot.py  deploy_hook.sh  hello.py  test_bot.py
TelegramRevamp/: .env  Dockerfile  README.md  bot.py  check_bot.py  config.py  database.py  deep_check.py  docker-compose.yml  full_check.py  keyboards.py  main.py  pyproject.toml  requirements.txt  restart.py  webapp.py
TelegramRevamp/templates/: orders.html
дизайн приложения/: README.md  index.html
дизайн приложения/src/app/: App.tsx
дизайн приложения/src/app/components/: order-card.tsx
дизайн приложения/src/styles/: theme.css
